php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #63428 The behavior of execute() changed
Submitted: 2012-11-03 15:25 UTC Modified: 2012-11-03 16:15 UTC
From: reeze@php.net Assigned: nikic (profile)
Status: Closed Package: *General Issues
PHP Version: master-Git-2012-11-03 (Git) OS: ANY
Private report: No CVE-ID: None
 [2012-11-03 15:25 UTC] reeze@php.net
Description:
------------
Test Zend/tests/bug35437.phpt failed because of this when dtrace
enabled or any extension which override zend_execute function pointer,
such as xdebug.


Test script:
---------------
Test: Zend/tests/bug35437.phpt with dtrace or xdebug enabled

Expected result:
----------------
test PASS

Actual result:
--------------
Test failed because of segfault.

Patches

bug63428.patch (last revision 2012-11-03 16:14 UTC by laruence@php.net)

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2012-11-03 15:28 UTC] reeze@php.net
-Assigned To: +Assigned To: nikic
 [2012-11-03 15:28 UTC] reeze@php.net
Hi Nikic,

will you take a look?

Thanks :)

https://github.com/php/php-src/pull/227
 [2012-11-03 16:14 UTC] laruence@php.net
The following patch has been added/updated:

Patch Name: bug63428.patch
Revision:   1351959257
URL:        https://bugs.php.net/patch-display.php?bug=63428&patch=bug63428.patch&revision=1351959257
 [2012-11-03 16:15 UTC] laruence@php.net
I attached a new patch, since the patch reeze made, will check twice for 
EG(exception), which is not necessary.

thanks
 [2012-11-04 04:50 UTC] laruence@php.net
-Status: Assigned +Status: Closed
 [2012-11-04 04:50 UTC] laruence@php.net
Automatic comment on behalf of laruence
Revision: http://git.php.net/?p=php-src.git;a=commit;h=7bcb8780e0ed042888f88c78919b7726be9ea931
Log: Fixed bug #63428 (The behavior of execute() changed)
 [2013-11-17 09:32 UTC] laruence@php.net
Automatic comment on behalf of laruence
Revision: http://git.php.net/?p=php-src.git;a=commit;h=7bcb8780e0ed042888f88c78919b7726be9ea931
Log: Fixed bug #63428 (The behavior of execute() changed)
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Sep 05 02:00:01 2026 UTC