Fixed bug #63428 (The behavior of execute() changed)